--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-#nav {
-  background-color: crimson;
-}
-header {
-  background-color: blueviolet;
-}
-
 *,
 *::before,
 *::after {
@@ -15,9 +8,38 @@ header {
   text-decoration: none;
 }
 
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #868e96;
+  --gray-dark: #343a40;
+  --primary: #4e66f8;
+  --secondary: #e83e8c;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #rgb(236, 231, 231);
+  --dark: #343a40;
+  --font-family-sans-serif: "Poppins", sans-serif;
+  --font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
+  --breakpoint-xs: 0;
+}
+
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-family: sans-serif;
+  line-height: 1.15;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -25,7 +47,93 @@ html {
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  background-color: var(--main-darkblue) !important;
-  font-family: "Apercu", sans-serif, Tahoma, Verdana;
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.6;
+}
+header {
+  height: 20px;
+}
+#nav {
+  overflow: hidden;
+  background-color: var(--cyan);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+}
+
+#nav li {
+  display: block;
+  float: right;
+  margin: 0;
+  text-align: right;
+  padding: 1.5em 0.5em;
+}
+
+#nav a {
+  color: var(--white);
+  font-size: 1rem;
+  font-weight: 700;
+  text-decoration: none;
+  padding-right: 0.3em;
+  text-align: center;
+}
+
+#nav ul li a:hover {
+  color: var(--pink);
+}
+
+#container-pictures {
+  margin: 0;
+  padding: 0;
+  height: 70%;
+  margin-top: 4.7em;
+}
+
+/*----Caroulsel Pictures----*/
+#img {
+  height: 70vh;
+  margin: 0 auto;
+}
+
+img #image.d-block.w-100 {
+  box-sizing: border-box;
+  color: var(--white);
+  font-family: var(--font-family-monospace);
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+  height: 70vh;
+  text-align: center;
+}
+
+div.container.carousel-caption.d-none.d-md-block {
+  bottom: 1.25rem;
+  box-sizing: border-box;
+  line-height: 1em;
+  list-style: outside none none;
+  margin: 0 auto;
+  max-width: 960px;
+  padding-top: 3em;
+  text-align: center;
+}
+
+#p-text {
+  padding-top: 3em;
+  text-align: center;
+  font-weight: 600;
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  padding-top: 1.5em;
+  color: var(--green);
+}
+/* take the padding and fix the title on the middle*/
+#text {
+  text-align: center;
+  padding-bottom: 5em;
+  font-size: 4.5rem;
+  color: var(--light);
 }
