--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ header {
   top: 0;
   z-index: 1;
   width: 100%;
+  height: 5rem;
 }
 
 #nav li {
@@ -70,7 +71,7 @@ header {
   float: right;
   margin: 0;
   text-align: right;
-  padding: 1.5em 0.5em;
+  padding: 0.5em;
 }
 
 #nav a {
@@ -86,54 +87,51 @@ header {
   color: var(--pink);
 }
 
-#container-pictures {
-  margin: 0;
-  padding: 0;
-  height: 70%;
-  margin-top: 4.7em;
-}
-
 /*----Caroulsel Pictures----*/
-#img {
-  height: 70vh;
-  margin: 0 auto;
-}
 
-img #image.d-block.w-100 {
-  box-sizing: border-box;
-  color: var(--white);
-  font-family: var(--font-family-monospace);
-  list-style: outside none none;
+div #img {
   margin: 0;
   padding: 0;
   height: 70vh;
-  text-align: center;
+  margin-top: 3.7em;
 }
 
-div.container.carousel-caption.d-none.d-md-block {
-  bottom: 1.25rem;
-  box-sizing: border-box;
-  line-height: 1em;
-  list-style: outside none none;
-  margin: 0 auto;
-  max-width: 960px;
-  padding-top: 3em;
-  text-align: center;
-}
-
-#p-text {
-  padding-top: 3em;
-  text-align: center;
+.carousel-text {
+  position: absolute;
   font-weight: 600;
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-  padding-top: 1.5em;
-  color: var(--green);
+  color: white;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
 }
-/* take the padding and fix the title on the middle*/
-#text {
-  text-align: center;
-  padding-bottom: 5em;
-  font-size: 4.5rem;
+
+.carousel-item h1 {
+  font-size: 3rem;
+  color: var(--white);
+}
+
+.carousel-item p {
+  font-size: 1rem;
+  color: var(--pink);
+  margin: 0;
+}
+
+/*
+.carousel-caption p {
+  position: absolute;
+  margin: 0;
+  color: var(--pink);
+  left: 50%;
+  top: 40%;
+  transform: translate(-80%, -80%);
+}
+/* 
+
+take the padding and fix the title on the middle
+padding-bottom: 5em;
+.text {
+  font-size: 4rem;
+  font-weight: 600;
   color: var(--light);
 }
+*/
