--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-#nav {
-  background-color: crimson;
-}
-header {
-  background-color: blueviolet;
-}
-
 *,
 *::before,
 *::after {
@@ -15,9 +8,27 @@ header {
   text-decoration: none;
 }
 
+:root {
+  --pink: #e83e8c;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --blue: #4e66f8;
+  --white: #fff;
+  --gray-dark: #343a40;
+  --light: rgb(236, 231, 231);
+  --dark: #e8eaeb;
+  --font-family-sans-serif: "Poppins", sans-serif;
+  --font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
+  --breakpoint-xs: 0;
+}
+
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-family: sans-serif;
+  line-height: 1.15;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -25,7 +36,137 @@ html {
 body {
   margin: 0;
   padding: 0;
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.6;
   overflow-x: hidden;
-  background-color: var(--main-darkblue) !important;
-  font-family: "Apercu", sans-serif, Tahoma, Verdana;
+}
+
+header {
+  height: 0px;
+}
+
+#nav {
+  overflow: hidden;
+  background-color: var(--cyan);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  /*height: 5rem;*/
+}
+
+#nav li {
+  display: block;
+  float: right;
+  margin: 0;
+  text-align: right;
+  padding: 0.5em;
+}
+
+#nav a {
+  color: var(--white);
+  font-size: 1rem;
+  text-decoration: none;
+  padding-right: 0.3em;
+  text-align: center;
+}
+
+#nav ul li a:hover {
+  color: var(--pink);
+}
+
+/*----Caroulsel Pictures----*/
+
+#carousel {
+  padding-top: 4.5em !important;
+}
+
+.carousel-pictures {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+  height: 90vh;
+  width: 100vw;
+}
+
+#img {
+  margin: 0;
+  padding: 0;
+  /*height: 70vh;
+ margin-top: 3.7em;*/
+}
+
+.carousel-text {
+  position: absolute;
+  font-weight: 700;
+  color: white;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+}
+
+.carousel-item h1 {
+  font-size: 3rem;
+  color: var(--white);
+}
+
+/*.carousel-item */
+.section-two {
+  background-color: var(--dark);
+}
+
+.content-two {
+  padding: 4rem;
+}
+
+/* Section 3 */
+
+.section-three {
+  margin: 0 auto !important;
+
+  padding: 6rem 2px;
+  text-align: left;
+  color: var(--gray-dark);
+}
+
+.subtext {
+  font-size: 1.5rem;
+  color: var(--pink);
+  margin: 0;
+}
+
+h2 {
+  color: var(--gray-dark);
+}
+
+.photo-container {
+  justify-content: center;
+  margin: 0 auto;
+  /*height: 50vh;*/
+}
+
+img.photos.hover-scale {
+  margin-top: 2em;
+  border-style: none;
+  box-sizing: border-box;
+
+  cursor: pointer;
+  font-family: Poppins, sans-serif;
+  height: auto;
+
+  list-style: outside none none;
+  max-width: 50%;
+
+  transition: all 0.2s ease-in-out;
+  vertical-align: middle;
+  width: 225px;
+  height: 225px;
+}
+
+img.hover-scale:hover {
+  transform: scale(1.05);
 }
